--- a/src/main/resources/AdminPage.fxml
+++ b/src/main/resources/AdminPage.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -40,71 +32,6 @@
             <Font size="23.0" />
          </font></Button>
       <Separator layoutX="13.0" layoutY="80.0" prefHeight="0.0" prefWidth="1174.0" />
-      <GridPane layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <VBox alignment="TOP_CENTER" prefHeight="220.0" prefWidth="210.0" spacing="50.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Make a Request:">
-                     <font>
-                        <Font size="23.0" />
-                     </font></Text>
-                  <MenuButton mnemonicParsing="false" text="Type of Request">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                      <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </MenuButton>
-                  <TextField alignment="CENTER" promptText="Room No.">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets left="70.0" right="70.0" />
-                     </VBox.margin></TextField>
-                  <Button mnemonicParsing="false" text="Request">
-                     <font>
-                        <Font size="23.0" />
-                     </font></Button>
-               </children>
-               <padding>
-                  <Insets left="30.0" right="30.0" top="25.0" />
-               </padding>
-            </VBox>
-            <VBox alignment="TOP_CENTER" prefHeight="220.0" prefWidth="210.0" spacing="50.0" GridPane.columnIndex="1">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To Be Completed:">
-                     <font>
-                        <Font size="23.0" />
-                     </font></Text>
-                  <MenuButton mnemonicParsing="false" text="My Requests">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Action 1" />
-                        <MenuItem mnemonicParsing="false" text="Action 2" />
-                     </items>
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </MenuButton>
-                  <Button mnemonicParsing="false" text="Mark Completed">
-                     <font>
-                        <Font size="23.0" />
-                     </font></Button>
-               </children>
-               <padding>
-                  <Insets left="30.0" right="30.0" top="25.0" />
-               </padding>
-            </VBox>
-         </children>
-      </GridPane>
+      <fx:include source="LoggedInPage.fxml" fx:id="serviceArea" layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0" />
    </children>
 </AnchorPane>
