--- a/src/main/resources/RegStaffPage.fxml
+++ b/src/main/resources/RegStaffPage.fxml
@@ -36,71 +36,6 @@
             <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
          </image>
       </ImageView>
-      <GridPane alignment="TOP_CENTER" layoutX="14.0" layoutY="94.0" prefHeight="692.0" prefWidth="1174.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <VBox alignment="TOP_CENTER" prefHeight="191.0" prefWidth="211.0" spacing="50.0" GridPane.columnIndex="1">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To Be Completed:">
-                     <font>
-                        <Font size="23.0" />
-                     </font></Text>
-                  <MenuButton mnemonicParsing="false" text="My Requests">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Action 1" />
-                        <MenuItem mnemonicParsing="false" text="Action 2" />
-                     </items>
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </MenuButton>
-                  <Button mnemonicParsing="false" text="Mark Completed">
-                     <font>
-                        <Font size="23.0" />
-                     </font></Button>
-               </children>
-               <padding>
-                  <Insets left="30.0" right="30.0" top="25.0" />
-               </padding>
-            </VBox>
-            <VBox alignment="TOP_CENTER" prefHeight="220.0" prefWidth="210.0" spacing="50.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Make a Request:">
-                     <font>
-                        <Font size="23.0" />
-                     </font></Text>
-                  <MenuButton mnemonicParsing="false" text="Type of Request">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                      <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </MenuButton>
-                  <TextField alignment="CENTER" prefHeight="44.0" prefWidth="337.0" promptText="Room No.">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets left="70.0" right="70.0" />
-                     </VBox.margin></TextField>
-                  <Button mnemonicParsing="false" text="Request">
-                     <font>
-                        <Font size="23.0" />
-                     </font></Button>
-               </children>
-               <padding>
-                  <Insets left="30.0" right="30.0" top="25.0" />
-               </padding>
-            </VBox>
-         </children>
-      </GridPane>
+      <fx:include source="LoggedInPage.fxml" fx:id="serviceArea" layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0" />
    </children>
 </AnchorPane>
